# nodejs-rust

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  index.js  package-lock.json  package.json  publish.sh
nodejs-rust/: Cargo.toml  index.d.ts  index.js  package.json  test.mjs
nodejs-rust/.github/workflows/: CI.yml
nodejs-rust/npm/darwin-arm64/: README.md  package.json
nodejs-rust/npm/darwin-x64/: README.md  package.json
nodejs-rust/npm/linux-x64-gnu/: README.md  package.json
nodejs-rust/npm/win32-x64-msvc/: README.md  package.json
nodejs-rust/src/: lib.rs
