[package]
edition = "2021"
name = "nodejs-rust"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.0", default-features = false, features = ["napi4","async"] }
napi-derive = "2.12.2"
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
